# data_driven_EF

./: .gitignore  AGENTS.md  ARCHITECTURE.md  PLAN.md  PROGRESS.md  PROJECT_STRUCTURE.md  README.md  inspect_excel_deep.py  main.py  pyproject.toml
FC_compute/: compute_fc_schaefer100.py  tutorial.ipynb
analysis/: efny_pls_analysis.py  pls_brain_behavior_analysis.py  pls_variance_explanation.py
app_data_proc/: analyze_task_subjects.py  build_behavioral_data.py  check_missing_beh_metrics.py  format_app_data.py  task_analysis_plot.py  task_analysis_run.py  task_analysis_summary.py
check_bp_data/: preprocess_APP_data_mismatch.py
configs/: analysis.yaml  behavioral_metrics.yaml  dataset_tsinghua_taskfmri.yaml  dataset_xiangya_taskfmri.yaml  paths.yaml
data_vis/: compare_efny_metrics.py  data_vis.ipynb  show_model_result.py
docs/: 20251226_session_align-behavior-logic.md  20251226_session_check-emotion-nback.md  20251226_session_diagnose-oneback-emotion-na-rerun.md  20251226_session_diagnose-oneback-emotion-na.md  20251226_session_fix-import-check-missing.md  20251226_session_fix-nback-missing-metrics.md  20251226_session_format-app-data-fixes.md  20251226_session_missing-beh-metrics.md  20251226_session_neuroimg_prep.md  20251226_session_remove-task-csv.md  20251226_session_task-analysis.md  20251227_session_batch-loadings-visualization.md  20251227_session_loadings-similarity-visualization.md  README.md  data_dictionary.md  methods.md  neuroimg_prep.md  workflow.md
functional_conn/: cluster_convert_fc_vec.sh  compute_fc_schaefer.py  compute_group_avg_fc.py  (+5 more)
(+282 files in other folders)
