[project]
name = "data-driven-ef"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "absl-py>=2.4.0",
    "arviz>=0.22,<1.0",
    "hssm>=0.2.11",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "netcdf4>=1.7.4",
    "numpy>=2.4.2",
    "numpyro>=0.21.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pyyaml>=6.0.3",
    "seaborn>=0.13.2",
]
